@@ -1,5 +1,5 @@
 /*
-   Copyright (c) 2010, 2015, Oracle and/or its affiliates. All rights reserved.
+   Copyright (c) 2010, 2021, Oracle and/or its affiliates.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License, version 2.0,
@@ -28,7 +28,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 
 import java.util.ArrayList;
@@ -124,7 +124,7 @@ public class ClusterJHelper {
                 bufferedReader = new BufferedReader(inputStreamReader);
                 factoryName = bufferedReader.readLine();
                 Class<T> serviceClass = (Class<T>)Class.forName(factoryName, true, loader);
-                T service = serviceClass.newInstance();
+                T service = serviceClass.getConstructor().newInstance();
                 if (service != null) {
                     result.add(service);
                 }
@@ -136,6 +136,10 @@ public class ClusterJHelper {
                 errorMessages.append(ex.toString());
             } catch (IllegalAccessException ex) {
                 errorMessages.append(ex.toString());
+            } catch (InvocationTargetException e) {
+                errorMessages.append(e.toString());
+            } catch (NoSuchMethodException e) {
+                errorMessages.append(e.toString());
             } finally {
                 try {
                     if (inputStream != null) {
@@ -194,7 +198,7 @@ public class ClusterJHelper {
                    throw new ClassCastException(cls.getName() + " " + implementationClassName);
                 }
                 serviceClass = (Class<T>)clazz;
-                T service = serviceClass.newInstance();
+                T service = serviceClass.getConstructor().newInstance();
                 return service;
             } catch (ClassNotFoundException e) {
                 throw new ClusterJFatalUserException(implementationClassName, e);
@@ -203,6 +207,10 @@ public class ClusterJHelper {
             } catch (InstantiationException e) {
                 throw new ClusterJFatalUserException(implementationClassName, e);
             } catch (IllegalAccessException e) {
+                throw new ClusterJFatalUserException(implementationClassName, e);
+            } catch (InvocationTargetException e) {
+                throw new ClusterJFatalUserException(implementationClassName, e);
+            } catch (NoSuchMethodException e) {
                 throw new ClusterJFatalUserException(implementationClassName, e);
             }
         }
@@ -217,7 +225,6 @@ public class ClusterJHelper {
      * @param implementationClassName
      * @return the implementation instance for a service
      */
-    @SuppressWarnings("unchecked") // (Class<T>)clazz
     public static <T> T getServiceInstance(Class<T> cls, String implementationClassName) {
         return getServiceInstance(cls, implementationClassName, CLUSTERJ_HELPER_CLASS_LOADER);
     }
