@@ -1,5 +1,5 @@
 /*
-   Copyright (c) 2010, 2016, Oracle and/or its affiliates. All rights reserved.
+   Copyright (c) 2010, 2021, Oracle and/or its affiliates.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License, version 2.0,
@@ -41,8 +41,7 @@ public class LoggerFactoryService {
         if (loggerFactoryName != null) {
             try {
                 instance = LoggerFactory.class.cast(
-                        LoggerFactory.class.forName(loggerFactoryName)
-                        .newInstance());
+                        Class.forName(loggerFactoryName).getDeclaredConstructor().newInstance());
             } catch (Throwable t) {
                 System.err.println("ClusterJ user exception: could not load class " + loggerFactoryName);
             }
