@@ -1,5 +1,5 @@
 /*
-   Copyright (c) 2012, Oracle and/or its affiliates. All rights reserved.
+   Copyright (c) 2012, 2021, Oracle and/or its affiliates.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License, version 2.0,
@@ -100,7 +100,7 @@ public class TestSuite implements Test {
                         System.out.println(m.getName() + 
                                 " @Ignore: " + ignoreTypeReason + ":" + ignoreMethodReason);
                     } else {
-                        TestCase t = testClass.newInstance();
+                        TestCase t = testClass.getDeclaredConstructor().newInstance();
                         t.name = testClass.getSimpleName() + "." + m.getName();
                         t.method = m;
                         tests.add(t);
