@@ -1,6 +1,5 @@
 /*
- Copyright 2010 Sun Microsystems, Inc.
- Use is subject to license terms.
+ Copyright (c) 2010, 2021, Oracle and/or its affiliates.
 
  This program is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License, version 2.0,
@@ -479,7 +478,7 @@ public class MyLoadUnloadTest {
 
         out.println();
         out.println("    create instance: ...");
-        Object o = cls.newInstance();
+        Object o = cls.getDeclaredConstructor().newInstance();
         out.println("    ... created instance: " + o);
         
         out.println();
